kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-argocd
spec:
  type: NodePort
  selector:
    app: blog-argocd
  ports:
  - port: 80
    nodePort: 30225
